--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 data_set/* filter=lfs diff=lfs merge=lfs -text
+\#[[:space:]]O-HAZY[[:space:]]NTIRE[[:space:]]2018/* filter=lfs diff=lfs merge=lfs -text
